--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,20 @@
     }
   ],
   "require": {
-    "mattvb91/lightmodel": "0.2.*"
+    "mattvb91/lightmodel": "0.3.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7",
+    "satooshi/php-coveralls": "^1.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "mattvb91\\DocPropGenerator\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "mattvb91\\DocPropGenerator\\Tests\\": "tests/"
+    }
   }
 }
