--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
-  "name": "vendor_name/package_name",
-  "description": "description_text",
+  "name": "mattvb91/docPropGenerator",
+  "description": "@property class documentation generator for @mixin",
   "minimum-stability": "stable",
   "license": "proprietary",
   "authors": [
     {
-      "name": "author's name",
-      "email": "email@example.com"
+      "name": "Matthias von Bargen",
+      "email": "matt@mavon.ie"
     }
   ],
   "require": {
-    "mattvb91/lightmodel": "0.3.*"
+    "mattvb91/lightmodel": "0.3.*",
+    "nategood/commando": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
@@ -25,5 +26,6 @@
     "psr-4": {
       "mattvb91\\DocPropGenerator\\Tests\\": "tests/"
     }
-  }
+  },
+  "bin": ["bin/docPropGenerator.php"]
 }
